// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Empty schema spec Generated QL schema 1`] = `
"interface Node {
  id: ID!
}

type Query {
  node(id: ID!): Node
  hello: String
}
"
`;

exports[`One empty entity type schema spec Generated QL schema 1`] = `
"interface Node {
  id: ID!
}

enum EntityType {
  Foo
}

interface Entity implements Node {
  id: ID!
  _type: EntityType!
  _name: String!
}

type Foo implements Node & Entity {
  id: ID!
  _type: EntityType!
  _name: String!
}

type Query {
  node(id: ID!): Node
  hello: String
}
"
`;

exports[`Two entity types schema spec Generated QL schema 1`] = `
"interface Node {
  id: ID!
}

enum EntityType {
  Foo
  Bar
}

interface Entity implements Node {
  id: ID!
  _type: EntityType!
  _name: String!
}

type Foo implements Node & Entity {
  id: ID!
  _type: EntityType!
  _name: String!
  fooField: String
}

type Bar implements Node & Entity {
  id: ID!
  _type: EntityType!
  _name: String!
  barField1: String
  barField2: String
}

type Query {
  node(id: ID!): Node
  hello: String
}
"
`;
